[tool.poetry]
name = "dengue_analysis"
version = "0.1.0"
description = "A project for analyzing dengue data."
authors = ["Edmar Bevilaqua <edmar.bevi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/edmar_bevilaqua/dengue_analysis"
repository = "https://github.com/edmar_bevilaqua/dengue_analysis"
keywords = ["dengue", "analysis", "data science"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0"
numpy = "^1.24"
matplotlib = "^3.7"
seaborn = "^0.12"
scikit-learn = "^1.2"
keras = "^2.12"
torch = "^2.0"
ipykernel = "^6.29.5"
pyarrow = "^20.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"